# LawAgent_Kimi

./: .gitignore  Agents.md  pyproject.toml  民事诉状生成与法律咨询系统任务描述书.md
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: complaint.py  consult.py  health.py  knowledge.py
backend/app/llm/: client.py  offline.py
backend/app/rag/: chunker.py  embedder.py  vector_store.py
backend/app/repositories/: db.py  kb_repo.py  records_repo.py
backend/app/services/: complaint_templates.py  consult_service.py  extract_service.py  knowledge_service.py
config/: settings.example.yaml
data/legal/: 三类常见案件起诉提示.md  民事法律基础条文摘录.md  立案材料与起诉流程说明.md  诉讼费用基础说明.md  起诉条件与程序条文摘录.md
scripts/: build_index.py  smoke_consult.py
tests/: conftest.py  test_chunker.py  test_complaint.py  test_config.py  test_consult.py  test_health.py  test_kb_repo.py  test_knowledge_service.py  test_records_repo.py
