[project]
name = "law-agent"
version = "0.1.0"
description = "民事诉状生成与法律咨询系统（RAG Demo）"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    # 阶段二（RAG 检索）启用：
    # "faiss-cpu>=1.9.0",
    # "sentence-transformers>=3.0.0",
    # "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
addopts = "-v"
