[project]
name = "law-agent"
version = "0.1.0"
description = "民事诉状生成与法律咨询系统（RAG Demo）"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "faiss-cpu>=1.9.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
# 本地中文向量模型（bge-small-zh-v1.5），体积较大按需安装：uv sync --extra embed
# 未安装时系统自动降级为哈希嵌入离线模式
embed = [
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
addopts = "-v"
